--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
+@import url("https://fonts.googleapis.com/css?family=Italiana");
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#rectangular {
+  margin-top: -150px;
+  width: 100%;
+  height: auto;
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-width: 500px) {
+  #rectangular {
+    margin-top: 0px;
+  }
+
+  #hero-title {
+    top: 10px;
+    left: 36px;
+    font-size: 8px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media only screen and (max-width: 800px) {
+  #rectangular {
+    margin-top: -50px;
+  }
+
+  #hero-title {
+    top: 20px;
+    left: 36px;
+    font-size: 10px;
+  }
 }
 
-.App-link {
-  color: #61dafb;
+#hero-title {
+  position: absolute;
+  top: 150px;
+  left: 66px;
+  font-size: auto;
+  color: #4242aa;
+  text-align: left;
+  font-family: Italiana, serif;
+  font-size: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#debit-card {
+  -webkit-transform: rotate(4deg);
+  width: 50%;
+  height: auto;
+  margin-left: -20px;
 }
