gold strip on header

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,16 @@
   margin-left: -20px;
 }
 
+#strip {
+  width: 100%;
+  height: 10px;
+  background-image: linear-gradient(
+    to right,
+    rgb(238, 121, 12),
+    rgb(255, 196, 0)
+  );
+}
+
 @media screen and (max-width: 1300px) {
   #rectangular {
     margin-top: -20px;
@@ -56,5 +66,9 @@
 
   #debit-card {
     width: 40%;
+  }
+
+  #strip {
+    height: 6px;
   }
 }
