--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,15 @@
   );
 }
 
-@media screen and (max-width: 1300px) {
-  #rectangular {
-  }
+#text-container {
+  color: #4242aa;
+  font-size: 14px;
+  font-family: Italiana, serif;
+  margin: auto;
+  width: 67%;
+}
 
+@media screen and (max-width: 1300px) {
   #hero-title {
     top: 50px;
     left: 56px;
