--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,21 @@ h5 {
   margin-top: 120px;
 }
 
+#footer-logos {
+  display: flex;
+  justify-content: space-between;
+}
+
+#footer-container {
+  padding: 40px;
+}
+
+#footer-text {
+  font-size: 12px;
+
+  text-align: left;
+}
+
 @media screen and (max-width: 1300px) {
   #hero-title {
     top: 50px;
@@ -184,5 +199,9 @@ h5 {
     font-size: 12px;
     padding: 15px;
     margin-top: 30px;
+  }
+
+  #footer-text {
+    font-size: 4px;
   }
 }
