--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,10 @@ h5 {
     margin-top: 30px;
   }
 
+  #footer-container {
+    padding: 20px;
+  }
+
   #footer-text {
     font-size: 4px;
   }
