--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,8 @@ h1 {
   margin: auto;
   width: 90%;
   height: 300px;
+  padding: 20px;
+  padding-top: 30px;
 }
 
 #service {
@@ -73,11 +75,11 @@ h1 {
   width: 33%;
   font-size: 14px;
   font-family: Italiana, serif;
+  padding: 60px;
 }
 
 #service-image {
-  width: 50%;
-  height: 50%;
+  width: 100%;
 }
 
 #about-container {
@@ -193,6 +195,7 @@ h5 {
   #service {
     font-size: 14px;
     width: 50%;
+    padding: 20px;
   }
 
   h5 {
