--- a/src/App.css
+++ b/src/App.css
@@ -43,10 +43,10 @@
   font-family: Italiana, serif;
   margin: auto;
   width: 55%;
-  height: auto;
+  height: 300%;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding: 20px;
 }
 
 p {
@@ -64,7 +64,7 @@ h1 {
   flex-direction: row;
   margin: auto;
   width: 90%;
-  height: 300px;
+  height: 400px;
   padding: 20px;
   padding-top: 30px;
 }
